--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_classes">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.cs2340project1.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_classes"
+        android:name="com.example.cs2340project1.ui.classes.ClassesFragment"
+        android:label="@string/title_classes"
+        tools:layout="@layout/fragment_classes" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.cs2340project1.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_upcoming"
+        android:name="com.example.cs2340project1.ui.upcoming.UpcomingFragment"
+        android:label="@string/title_upcoming"
+        tools:layout="@layout/fragment_upcoming" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.cs2340project1.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_to_do"
+        android:name="com.example.cs2340project1.ui.to_do.ToDoFragment"
+        android:label="@string/title_to_do"
+        tools:layout="@layout/fragment_to_do" />
 </navigation>
