--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="tan">#D2B48C</color>
     <color name="light_grey">#D3D3D3</color>
+    <color name="dark_grey">#A9A9A9</color>
 </resources>
