--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_classes"
-        android:icon="@drawable/round_list_24"
+        android:icon="@drawable/round_format_list_bulleted_24"
         android:title="@string/title_classes" />
 
     <item
