--- a/app/src/main/res/layout/fragment_upcoming_row.xml
+++ b/app/src/main/res/layout/fragment_upcoming_row.xml
@@ -18,14 +18,14 @@
         android:text="Assignment #1 - Exploring Android Studio"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/colorOnPrimaryContainer"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/toDoRowItem"
         app:layout_constraintEnd_toStartOf="@+id/dropdownButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.50" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/toDoRowItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
