--- a/app/src/main/res/layout/fragment_to_do_list_items.xml
+++ b/app/src/main/res/layout/fragment_to_do_list_items.xml
@@ -7,13 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".toDoListItems">
 
+    <Button
+        android:id="@+id/toDoDropDown"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="48dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="64dp"
+        app:icon="@drawable/round_expand_more_24"
+        app:iconTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/menuButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/menuButton"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        app:icon="@drawable/round_more_horiz_24"
+        app:iconTint="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/toDoRowItem"
-        android:layout_width="271dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
-        android:text="Math Test at 8 AM"
+        android:layout_width="157dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="76dp"
+        android:text="Math Test"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
