--- a/app/src/main/res/layout/fragment_to_do_list_items.xml
+++ b/app/src/main/res/layout/fragment_to_do_list_items.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".toDoListItems">
 
     <Button
@@ -37,9 +37,9 @@
         android:id="@+id/toDoRowItem"
         android:layout_width="157dp"
         android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="76dp"
-        android:text="Math Test"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Today"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
