--- a/app/src/main/res/layout/fragment_upcoming_class.xml
+++ b/app/src/main/res/layout/fragment_upcoming_class.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".UpcomingClassRow">
+    tools:context=".UpcomingClass">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
