First functioning dropdown list

--- a/app/src/main/res/layout/fragment_to_do_list_items.xml
+++ b/app/src/main/res/layout/fragment_to_do_list_items.xml
@@ -8,7 +8,7 @@
     tools:context=".toDoListItems">
 
     <Button
-        android:id="@+id/toDoDropDown"
+        android:id="@+id/dropdownButton"
         style="?attr/materialIconButtonStyle"
         android:layout_width="48dp"
         android:layout_height="47dp"
