--- a/app/src/main/res/layout/fragment_upcoming_assignment.xml
+++ b/app/src/main/res/layout/fragment_upcoming_assignment.xml
@@ -18,7 +18,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/colorOnPrimaryContainer"
         app:layout_constraintBottom_toTopOf="@+id/toDoRowItem"
-        app:layout_constraintEnd_toStartOf="@+id/toDoDropDown"
+        app:layout_constraintEnd_toStartOf="@+id/dropdownButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.50" />
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.5" />
 
     <Button
-        android:id="@+id/toDoDropDown"
+        android:id="@+id/dropdownButton"
         style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +57,6 @@
         app:iconTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toDoDropDown"
+        app:layout_constraintTop_toBottomOf="@+id/dropdownButton"
         app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
