--- a/app/src/main/res/layout/fragment_upcoming_class.xml
+++ b/app/src/main/res/layout/fragment_upcoming_class.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/toDoDropDown"
+            android:id="@+id/dropdownButton"
             style="?attr/materialIconButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
