Working double dropdown list

--- a/app/src/main/res/layout/fragment_upcoming_assignment.xml
+++ b/app/src/main/res/layout/fragment_upcoming_assignment.xml
@@ -8,7 +8,7 @@
     tools:context=".UpcomingRow">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/upcomingTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -33,7 +33,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/upcomingTitle"
         app:layout_constraintVertical_bias="0.5" />
 
     <Button
