--- a/app/src/main/res/layout/fragment_upcoming_assignment.xml
+++ b/app/src/main/res/layout/fragment_upcoming_assignment.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimaryContainer"
-    tools:context=".UpcomingRow">
+    android:background="?attr/colorPrimaryContainer">
 
     <TextView
         android:id="@+id/upcomingTitle"
