--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -6,17 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".ui.classes.ClassesFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/classList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addButton" />
+
+    <EditText
+        android:id="@+id/classNameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Class Name"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/classTimeField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Class Time"
+        app:layout_constraintTop_toBottomOf="@+id/classNameField" />
+
+    <EditText
+        android:id="@+id/classDaysField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Class Days"
+        app:layout_constraintTop_toBottomOf="@+id/classTimeField" />
+
+    <EditText
+        android:id="@+id/classInstructorField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Class Instructor"
+        app:layout_constraintTop_toBottomOf="@+id/classDaysField" />
+
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Class"
+        app:layout_constraintTop_toBottomOf="@+id/classInstructorField"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
