--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,4 +62,6 @@
     <color name="md_theme_dark_outlineVariant">#49454F</color>
     <color name="md_theme_dark_scrim">#000000</color>
     <color name="darkGreenHolo">@android:color/holo_green_dark</color>
+    <color name="completed_task_color">#808080</color> <!-- Grey color for completed tasks -->
+    <color name="default_text_color">#000000</color> <!-- Black color for default text -->
 </resources>
